[package]
name = "aptos-executor-types"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
aptos-crypto = { workspace = true }
aptos-types = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }