[package]
name = "aptos-mempool"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oneshot = { workspace = true }
anyhow = { workspace = true }

[features]
fuzzing = []
